# image-captioning-mlops

./: .gitignore  README.md  pyproject.toml
helm/: namespace.yaml
helm/gcs/: gcs-secret.yaml
helm/mlflow/: ingress-basic-auth-secret.yaml  mlflow-ingress.yaml  mlflow-values.yaml
helm/postgres/: postgres-secret.yaml  postgres-values.yaml
scripts/: clean-up.sh  deploy.sh
