[tool.poetry]
name = "image-captioning-mlops"
version = "0.1.0"
description = "An MLOps pipeline for image captioning with MLflow"
authors = ["pmittaldev <m@piyushmittal.com>"]
readme = "README.md"
packages = [{include = "image_captioning_mlops"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchvision = "^0.19.1"
mlflow = "^2.16.2"
pydantic = "^2.9.2"
jupyter = "^1.1.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
